[package]
name = "multisig_wallet"
version = "0.1.0"
description = "A multisig wallet program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multisig_wallet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"       # ← added for SPL token CPI support
solana-program = "1.16.0"